--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -47,12 +47,12 @@
     .headerWrap {
         .visualBg {
             //手機－主視覺圖片
-            //background-image: url('../img/visual_m.jpg');
+            background-image: url('../img/visual_m.png');
             //主視覺圖片垂直靠上或垂直置中對齊
             //background-position: center top;
             @media screen and (min-width: $tablet_portrait_min_w) and (max-width: $tablet_portrait_max_w) {
                 //平板－主視覺圖片
-                //background-image: url('../img/visual_tb.jpg');
+                background-image: url('../img/visual_tb.png');
             }
             @media screen and (min-width: $pc_landscape_min_w) {
                 //桌機－主視覺圖片
