--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -47,7 +47,7 @@
     .headerWrap {
         .visualBg {
             //手機－主視覺圖片
-            background-image: url('../img/visual_m.png');
+            background-image: url('../img/visual_m.jpg');
             //主視覺圖片垂直靠上或垂直置中對齊
             //background-position: center top;
             @media screen and (min-width: $tablet_portrait_min_w) and (max-width: $tablet_portrait_max_w) {
