--- a/jade/article/a_01.jade
+++ b/jade/article/a_01.jade
@@ -7,7 +7,7 @@ section.article_01
 				ul.list
 					li.fadeOut 
 						span.item 活動時間：
-						span.itemTxt 2016/10/27 ~ 2016/11/10
+						span.itemTxt 2016/10/27～2016/11/10
 					li.fadeOut 
 						span.item 參加對象：
 						span.itemTxt 不限年齡、不限性別，只要喜愛用手機紀錄生活，並樂於在自    己的社群上分享照片、文字。
