--- a/jade/article/a_01.jade
+++ b/jade/article/a_01.jade
@@ -13,11 +13,11 @@ section.article_01
 						span.itemTxt 不限年齡、不限性別，只要喜愛用手機紀錄生活，並樂於在自    己的社群上分享照片、文字。
 					li.fadeOut 
 						span.item 活動獎項：
-						span.itemTxt 共4名，SAMSUNG Galaxy A8 2016 乙支（價值15900元）  +8000元一名、5000元一名、3000元兩名。
+						span.itemTxt 共4名，SAMSUNG Galaxy A8 2016 乙支（價值15900元）  +8000元一名、5000元一名、3000元兩名。<br>（手機顏色不可挑選，隨機出貨） 
 				p 你是這樣的人嗎？不吝於炫自己的生活，樂於分享自己的時尚態度。來！這就跟我們一起來炫自己的流行也炫自己熱愛的城市裡最潮、最時尚的地點，分享心情感言、展現自信跟態度。來爭奪 "萬元獎金" 與SAMSUNG Galaxy A8 2016時尚手機。
 				br
 			.btnWrap
-				a.btn(href='https://www.facebook.com/juksymag', target='_blank')
+				a.btn(href='https://www.facebook.com/events/620224604823793/', target='_blank')
 					.icon
 						svg(version="1.1", xmlns="http://www.w3.org/2000/svg", xmlns:xlink="http://www.w3.org/1999/xlink", x="0px" y="0px", viewBox="0 0 89.4 37.4", style="enable-background:new 0 0 89.4 37.4;", xml:space="preserve")
 							g
