--- a/jade/base/head.jade
+++ b/jade/base/head.jade
@@ -2,17 +2,17 @@ meta(charset='UTF-8')
 meta(name='viewport', content='width=device-width, initial-scale=1')
 
 // SEO
-title 特企整理頁面 - JUKSY 流行生活網
+title 分享屬於你的[城市時尚]─你的城市‧由你演繹 - JUKSY 流行生活網
 meta(name='keywords', content='流行,潮流,街頭,生活,娛樂,時尚,精品,穿搭,影音,音樂,電影,設計,藝術,3C,超跑,正妹')
-meta(name='description', content='瘋迷無國界、今夏最火的話題《Pokemon GO》，自上線以來熱議不斷，並再度引爆「神奇寶貝」初代狂潮！想跟風卻摸不著頭緒？JUKSY 為你開啟「寶可夢速成修練之路」！')
+meta(name='description', content='甚麼是時尚？甚麼是潮流？沒人能定義，我的風格我自己演繹，無須配飾，手中的 Samsung Galaxy A8 就夠我炫，雙擊Home鍵開啟相機記錄生活，炫自己精彩！現在，跟我分享你的態度，贏取手機或萬元獎金。')
 // SEO end
 
 // FB
 meta(property='fb:app_id', content='608477045879026')
-meta(property='og:title', content='成神之路有你有我！寶可夢全攻略')
-meta(property='og:description', content='瘋迷無國界、今夏最火的話題《Pokemon GO》，自上線以來熱議不斷，並再度引爆「神奇寶貝」初代狂潮！想跟風卻摸不著頭緒？JUKSY 為你開啟「寶可夢速成修練之路」！')
+meta(property='og:title', content='分享屬於你的[城市時尚]─你的城市‧由你演繹')
+meta(property='og:description', content='甚麼是時尚？甚麼是潮流？沒人能定義，我的風格我自己演繹，無須配飾，手中的 Samsung Galaxy A8 就夠我炫，雙擊Home鍵開啟相機記錄生活，炫自己精彩！現在，跟我分享你的態度，贏取手機或萬元獎金。')
 meta(property='og:image', content='img/fb.png')
-meta(property='og:url', content='https://www.juksy.com/events/pokemon2016go')
+meta(property='og:url', content='https://www.juksy.com/events/201611fashioncity')
 meta(property='og:site_name', content='JUKSY 流行生活網')
 meta(property='og:type', content='website')
 // FB end
