--- a/jade/header/h_01.jade
+++ b/jade/header/h_01.jade
@@ -11,7 +11,7 @@ header.header_01
 								g
 									path(class="st0", d="M7.8,0l5,3.6c-2.6,4.3-4,8.8-4.1,13.5V24H0v-5.8c0-3.4,0.7-6.7,2.2-10.1C3.7,4.8,5.5,2.1,7.8,0z M22,0l5,3.6c-2.6,4.3-4,8.8-4.1,13.5V24h-8.7v-5.8c0-3.4,0.7-6.7,2.2-10.1C17.8,4.8,19.7,2.1,22,0z")
 						.txt(data-dotdotdot="true") 甚麼是時尚潮流？沒人能定義，我的風格我自己演繹，無需配飾，手中的 SAMSUNG Galaxy A8 2016就夠我炫，雙擊 Home 鍵開啟相機紀錄生活，炫自己精彩！現在，跟我分享你的態度，贏取手機或萬元獎金。
-				a.link(href="https://www.juksy.com/archives/53887", target="_blank")
+				a.link(href="https://www.facebook.com/events/620224604823793/", target="_blank")
 					.linkWrap
 						span.ch 馬上參加
 						span.ch.arrow →
