--- a/jade/index.jade
+++ b/jade/index.jade
@@ -4,7 +4,7 @@ html(lang='zh-TW')
     include ./base/head.jade
   body
     #fb-root
-    h1.hide 夏日穿搭特輯 - JUKSY 流行生活網
+    h1.hide 分享屬於你的[城市時尚]─你的城市‧由你演繹 - JUKSY 流行生活網
     include ./nav/n_01.jade
     include ./header/h_01.jade
     include ./layout/l_06.jade
