--- a/jade/layout/l_05.jade
+++ b/jade/layout/l_05.jade
@@ -5,21 +5,21 @@ section.layout_05(data-menu='true')
 		h2.detail 時尚職人眼光，看城市
 		ul.article
 			li.fadeOut
-				a.img.imgLoading(href='https://www.juksy.com/archives/54297', target='_blank', data-imgload='https://static.juksy.com/static/600x600/files/articles/58493/cover/58043bfa2972a.png')
+				a.img.imgLoading(href='https://www.juksy.com/archives/58605', target='_blank', data-imgload='https://static.juksy.com/static/600x600/files/articles/58605/cover/580d82480b92a.png')
 					.linkWrap
 						.linkBorder
 							span.ch 馬上閱讀
 							span.ch.arrow →
 				.txtWrap
-					a.txt(data-dotdotdot='true', href='https://www.juksy.com/archives/54297', target='_blank')
-						h3 春夏就是「涼鞋」的季節！防爆汗必備，清涼有型3穿搭Look大放送！
+					a.txt(data-dotdotdot='true', href='https://www.juksy.com/archives/58605', target='_blank')
+						h3 跟著時尚MODEL看城市！彭千祐的午後私旅行
 			li.fadeOut
-				a.img.imgLoading(href='https://www.juksy.com/archives/54297', target='_blank', data-imgload='https://static.juksy.com/static/600x600/files/articles/58515/cover/58049b7060bdf.png')
+				a.img.imgLoading(href='https://www.juksy.com/archives/58667', target='_blank', data-imgload='https://static.juksy.com/static/600x600/files/articles/58667/cover/580d8743bf3e5.png')
 					.linkWrap
 						.linkBorder
 							span.ch 馬上閱讀
 							span.ch.arrow →
 				.txtWrap
-					a.txt(data-dotdotdot='true', href='https://www.juksy.com/archives/54297', target='_blank')
-						h3 春夏就是「涼鞋」的季節！防爆汗必備，清涼有型3穿搭Look大放送！
+					a.txt(data-dotdotdot='true', href='https://www.juksy.com/archives/58667', target='_blank')
+						h3 走逛台北潮去處！「個性派化妝師」古寧紫跟拍日記
 // layout05 end
