--- a/css/index.css
+++ b/css/index.css
@@ -3172,13 +3172,13 @@ _:-moz-tree-row(hover), .fixedBtnCover_01 .coverWrap .main .mainWrap .item ul.sh
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .header_01 .headerWrap .visualBg {
-    background-image: url("../img/visual_tb.png");
+    background-image: url("../img/visual_tb.jpg");
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header_01 .headerWrap .visualBg {
-    background-image: url("../img/visual_pc.png");
+    background-image: url("../img/visual_pc.jpg");
   }
 }
 
