--- a/jade/layout/l_03_infinite.jade
+++ b/jade/layout/l_03_infinite.jade
@@ -1,6 +1,6 @@
 // layout03_infinite
 section#layout_03_infinit.layout_03(data-menu='true')
-	.layoutWrap(data-tags='["我的城市時尚我自定義"]',data-filter='[56247, 56274, 56375]')
+	.layoutWrap(data-tags='["我的城市時尚我自定義"]',data-filter='[58605, 58667]')
 		.title RELATED POSTS
 		h2.detail 島內最時尚的遊人，都這樣炫玩！
 		.subTitleWrap
