--- a/jade/layout/l_06.jade
+++ b/jade/layout/l_06.jade
@@ -1,4 +1,4 @@
 // layout06
 section.layout_06(data-menu='true')
-	.layoutWrap(data-title='我的Galaxy A8 2016 獨到品味體驗', data-tags='["hithot","Samsung素人體驗"]',data-filter='[58605, 58667]')
+	.layoutWrap(data-title='我的Galaxy A8 2016 獨到品味體驗', data-tags='["Samsung素人體驗"]',data-filter='[58605, 58667]')
 // layout06 end
