--- a/scss/header/h_01.scss
+++ b/scss/header/h_01.scss
@@ -76,7 +76,7 @@
                             overflow: hidden;
                             margin: $line-height 0;
                             @media screen and (min-width: $pc_landscape_min_w) {
-                                width: 90%;
+                                width: 655px;
                                 max-height: $line-height*3;
                                 margin: 0;
                                 padding-bottom: 20px;
